# ccagents-gpt

./: .gitignore  pyproject.toml
app/: main.py
app/agents/: router.py  schemas.py  service.py
app/artifacts/: router.py  schemas.py  service.py
app/automation/: router.py  service.py
app/core/: config.py  database.py  responses.py
app/escalations/: router.py  schemas.py  service.py
app/feishu/: router.py  schemas.py  service.py
app/issues/: router.py  schemas.py  service.py
app/messaging/: router.py  schemas.py  service.py
app/projects/: router.py  schemas.py  service.py
app/reviews/: router.py  schemas.py  service.py
app/runners/: executor.py  router.py  schemas.py  service.py
app/tasks/: router.py  schemas.py  service.py
app/workers/: router.py  schemas.py  service.py
app/workflows/: router.py  schemas.py  service.py  state_machine.py
configs/: app.yaml
docs/: api-design-v0.1.md  database-ddl-v0.1.md  deployment-smoke-guide.md  hermes-agent-software-team-design-v1.2.md  hermes-agent-software-team-design-v1.3.md  remaining-work-plan.md
tests/: test_agent_messages_api.py  test_agents_api.py  test_artifacts_api.py  test_automation_api.py  test_config.py  test_database.py  test_escalations_api.py  test_feishu_api.py  test_health.py  test_issues_api.py  test_projects_api.py  test_reviews_api.py  test_runner_api.py  test_tasks_api.py  test_workers_api.py  test_workflows_api.py
